added js script

--- a/index.html
+++ b/index.html
@@ -22,32 +22,47 @@
 					parametri
 				</th>
 			</tr>
-			<tr>
-				<td>1</td>
-				<td>1</td>
-				<td>1</td>
-			</tr>
-				<td>1</td>
-				<td>1</td>
-				<td>1</td>
-			<tr>
-				<td>1</td>
-				<td>1</td>
-				<td>1</td>
-			</tr>
+			<tr><td>CPU</td><td>Intel</td><td>Core i7-12700K — 12C/20T, 3.6–5.0 GHz, LGA1700, 125W</td></tr>
+			<tr><td>Placă de bază</td><td>ASUS</td><td>ROG Strix Z690-E — LGA1700, DDR5, PCIe 5.0, ATX</td></tr>
+			<tr><td>Memorie RAM</td><td>Corsair</td><td>Vengeance 32GB (2×16) — DDR5-6000, CL36</td></tr>
+			<tr><td>Placă video (GPU)</td><td>NVIDIA</td><td>GeForce RTX 4070 — 12GB GDDR6X, PCIe 4.0</td></tr>
+			<tr><td>SSD</td><td>Samsung</td><td>980 Pro 1TB — NVMe M.2, ~3500 MB/s citire</td></tr>
+			<tr><td>HDD</td><td>Seagate</td><td>Barracuda 2TB — 7200 RPM, 256MB cache</td></tr>
+			<tr><td>Sursă (PSU)</td><td>Corsair</td><td>RM750x — 750W, 80+ Gold, modular</td></tr>
+			<tr><td>Carcasă</td><td>NZXT</td><td>H510 — Mid-Tower, ATX, sticlă temperată</td></tr>
+			<tr><td>Cooler CPU</td><td>Noctua</td><td>NH-D15 — dual-tower, 2×140mm</td></tr>
+			<tr><td>Ventilator</td><td>ARCTIC</td><td>P12 120mm — PWM, high static pressure</td></tr>
+			<tr><td>Monitor</td><td>Dell</td><td>S2721DGF — 27", 2560×1440, 165Hz, IPS</td></tr>
+			<tr><td>Tastatură</td><td>Logitech</td><td>G Pro — mecanică, RGB, TKL</td></tr>
+			<tr><td>Mouse</td><td>Logitech</td><td>G502 — până la 25k DPI, butoane programabile</td></tr>
+			<tr><td>Placă rețea</td><td>Intel</td><td>I225-V — 2.5 Gbps Ethernet</td></tr>
+			<tr><td>Placă sunet</td><td>Creative</td><td>Sound Blaster Z — 5.1, PCIe</td></tr>
 		</table>
+		</div>
+		<h1>Strucura retea</h1>
+		<div class="right" "background-color : #8f8f8fff">
+			<img src="img/retea.png" alt="retea">
 		</div>
 		<h1>Caracteristici conexiune retea</h1>
 		<ul>
-			<li>2</li>
-			<li>2</li>
-			<li>2</li>
+			 <li>Adresă MAC: <strong>00:1A:2B:3C:4D:5E</strong></li>
+			 <li>IP: <strong>192.168.1.42</strong></li>
+			 <li>Viteză upload: <strong>48.3 Mbps</strong></li>
+			 <li>Viteză download: <strong>312.7 Mbps</strong></li>
 		</ul>
-		<h1>Monitorizare resurse</h1>
+		<button id="res_btn"><h1>Monitorizare resurse</h1></button>
+		<br>
 		<div class="el_3">
-			<img src="img/img" alt="poza">
-			<img src="img/img" alt="poza">
-			<img src="img/img" alt="poza">
+		<div>
+			<img id="im1" src="img/img1.png" alt="poza">
+		</div>
+		<div >
+			<img id="im2" src="img/img2.png" alt="poza">
+		</div>
+		<div >
+			<img id="im3" src="img/img3.png" alt="poza">
+		</div>
 		</div>
 	</body>
+	<script src="script.js"></script>
 </html>
